updated hide icon for motif carousel. Updated export models to zip icon. Fixed bug with overflowing of model repository popup when adding new models to repository

--- a/src/bma.package/css/LTLStates.less
+++ b/src/bma.package/css/LTLStates.less
@@ -37,7 +37,7 @@
     .localstorage-repo{
         margin-top: 13px;
         margin-bottom: 13px;
-        max-height:200px;
+        height:200px;
         overflow-y:auto;
         ol {
             margin-top:0px;
