--- a/src/bma.package/css/StyleSheet.less
+++ b/src/bma.package/css/StyleSheet.less
@@ -2809,7 +2809,7 @@ textarea {
     background-size: contain;
     background-position: center;
     //background-position-x: center;
-    background-image: url(../images/ml/BMA_Delete_Carousel.svg);
+    background-image: url(../images/ml/BMA_Hide_Carousel.svg);
 }
 
 .ml-card-title {
@@ -2899,4 +2899,15 @@ textarea {
 .ml-navbutton-next-end {
     background-image: url(../images/ml/BMA_Scroll_Right_End.svg);
     right: -20px;
+}
+
+.export-zip-btn {
+    width: 50px;
+    height: 40px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    background-image: url(../images/Icon_Zip.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
